--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "webpack-dev-server --config build/webpack.config.dev.js --inline --progress --mode development",
     "prod": "webpack-dev-server --inline --progress --mode production",
     "lint": "eslint --ext .js --ext .vue --ext .jsx src/",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "precommit": "npm run lint"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^0.14.3",
     "i": "^0.3.6",
     "postcss-loader": "^2.1.4",
     "style-loader": "^0.21.0",
